<resources>
    <string name="app_name">RMAApp</string>
    <string name="clock">Clock</string>
    <string name="calendar">Calendar</string>
    <string name="add_event">Add Event</string>
    <string name="week_view">Week View</string>
    <string name="day_view">Day View</string>
    <string name="clock_fragment">Clock Fragment</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>

    <!-- Add Event Page -->
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="all_day">All-day</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>