<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/event_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/event_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:gravity="top"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/start_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/starts"
            app:layout_constraintTop_toBottomOf="@id/description_input_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/start_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/start_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/start_time_button"
            android:text="@string/select_date"/>

        <Button
            android:id="@+id/start_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/start_date_button"
            app:layout_constraintStart_toEndOf="@id/start_date_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/select_time"/>

        <TextView
            android:id="@+id/end_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ends"
            app:layout_constraintTop_toBottomOf="@id/start_date_button"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/end_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/end_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/end_time_button"
            android:text="@string/select_date"/>

        <Button
            android:id="@+id/end_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/end_date_button"
            app:layout_constraintStart_toEndOf="@id/end_date_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/select_time"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/all_day_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/all_day"
            app:layout_constraintTop_toBottomOf="@id/end_date_button"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/save_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/all_day_switch"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="@id/save_event_button"
            app:layout_constraintEnd_toStartOf="@id/save_event_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>